# rust_c_ffi

./: README.md
cpp_lib_in_rust/: README.md
cpp_lib_in_rust/consumer/: Cargo.toml
cpp_lib_in_rust/consumer/src/: main.rs
cpp_lib_in_rust/nativelib/: Cargo.toml
cpp_lib_in_rust/nativelib-sys/: Cargo.toml
cpp_lib_in_rust/nativelib-sys/c/: wrapper.c  wrapper.h
cpp_lib_in_rust/nativelib-sys/src/: build.rs
cpp_lib_in_rust/nativelib/src/: lib.rs
rust_lib_in_cpp/: README.md  main.cpp  meson.build
rust_lib_in_cpp/ffi_lib/: Cargo.toml
rust_lib_in_cpp/ffi_lib/c/: counter.hpp
rust_lib_in_cpp/ffi_lib/src/: lib.rs
